--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#aboutme" class="icon solid fa-user"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="#faq" class="icon solid fa-solid fa-magnifying-glass"><span>FAQ</span></a>
+						<a href="#" class="icon solid fa-home"><span></span></a>
+						<a href="#aboutme" class="icon solid fa-user"><span></span></a>
+						<a href="#contact" class="icon solid fa-envelope"><span></span></a>
+						<a href="#faq" class="icon solid fa-solid fa-magnifying-glass"><span></span></a>
 					</nav>
 
 				<!-- Main -->
