--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 									<h1>Real<span style="color: darkgreen; font-weight: bold;">ME</span></h1>
 
 									<p><br>Welcome to our space</p>
-									<p>I am invested in helping you through any situations</p>
+									<p>I am invested in helping you through any situation</p>
 
 									<p><br><br><a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0qouuRyVzc-kMDa943-ppsZC7pLg_tVakf_Sx9I_Syfq4ps9TlfrE5bF2P-6PFuNdmdxi8nMk3" target="_blank" style="color: darkgreen; font-weight: bold;">Book your session</a></p>
 
 								</header>
-								<a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0qouuRyVzc-kMDa943-ppsZC7pLg_tVakf_Sx9I_Syfq4ps9TlfrE5bF2P-6PFuNdmdxi8nMk3" class="jumplink pic" target="_blank">
-									<span class="arrow icon solid fa-calendar"><span>Book Now</span></span>
+								<a href="#" class="image fit">
+									
 									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
