--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<p><br><br><a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0qouuRyVzc-kMDa943-ppsZC7pLg_tVakf_Sx9I_Syfq4ps9TlfrE5bF2P-6PFuNdmdxi8nMk3" target="_blank" style="color: darkgreen; font-weight: bold;">Book your session</a></p>
 
 								</header>
-								<a href="#" class="image fit">
+								<a href="#" class="image centered">
 									
 									<img src="images/me.jpg" alt="" />
 								</a>
