--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								</header>
 								<a href="#" class="image centered">
 									
-									<img src="images/me.jpg" alt="" />
+									<img src="images/aboutme2.jpg" alt="" />
 								</a>
 							</article>
 
