--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 						<!-- Work -->
 							<article id="faq">
-								<h2 class="major">Frequently Asked Questions</h2>
+								<h2 class="major">FAQ</h2>
 								
 								<p>
 									These are some of the most common questions clients have. If yours is not covered here please feel free to reach out, say hi and ask anything that might be a concern.
